<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Demention</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="str_loading">Loading...</string>
    <string name="new_game">New Game</string>
    <string name="continue_game">Continue</string>
    <string name="options">Options</string>
    <string name="help">Help</string>
    <string name="credits">Credits</string>
    <string name="exit">Exit</string>
    <string name="bg_music">Background Music</string>
    <string name="bg_music_msg">Play background music</string>
    <string name="sound_effect">Sound Effects</string>
    <string name="sound_effect_msg">Play sound effects (this may help you recognize special objects)</string>
    <string name="game_title">Game</string>
    <string name="return_home">Quit to menu?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="video">Video</string>
    <string name="skip_video">Skip scene?</string>
    <string name="item_menu">Item Menu</string>
    <string name="hint_flood">Flood the grid with one single symbol within 22 steps</string>
    <string name="hint_statue">Guess the right positions of the statues within 6 steps</string>
</resources>